<resources>
    <string name="app_name">المخزون</string>
    <string name="BranchName">اسم الفرع</string>
    <string name="BranchLocation">موقع الفرع</string>
    <string name="BranchCode">رمز الفرع</string>
    <string name="todo">TODO</string>
    <string name="WarehaouseAdmin">إدارة المخزن</string>
    <string name="BranchSumm">ملخص الفرع
    sadasda</string>
    <string name="CommNum">اسم المستخدم</string>
    <string name="Pass">الرمز السري</string>
    <string name="warehouse">المخزن</string>
    <string name="login">تسجيل الدخول</string>
    <string name="addBranch">إضافة فرع</string>
    <string name="branchName">اسم الفرع</string>
    <string name="location">الموقع</string>
    <string name="pass">الرمز السري</string>
    <string name="cancel">إلغاء</string>
    <string name="save">حفظ</string>
    <string name="item_name">اسم العنصر</string>
    <!-- Preference framework strings. {@deprecated Do not use. Incorrectly matches android.R.string.ok rather than "yes".} -->
    <string name="yes">نعم</string>
    <!-- Preference framework strings. {@deprecated Do not use. Incorrectly matches android.R.string.cancel rather than "no".} -->
    <string name="no">إلغاء</string>
    <string name="add_item">إضافة عنصر</string>
    <string-array name="item_types">
        <item>طعام</item>
        <item>قابل لإعادة الاستخدام</item>
        <item>غير قابل لإعادة الاستخدام</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
</resources>