<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="الفرع رقم"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="@string/item_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@drawable/edit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="كيلو"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="اسم الوحدة"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@drawable/edit"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/input"
            android:id="@+id/types"
            />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/input"
            android:gravity="center"
            android:hint="الكمية"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@drawable/edit"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_dilg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded,TextContrastCheck" />

        <Button
            android:id="@+id/save_dilg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded,TextContrastCheck" />
    </LinearLayout>



</LinearLayout>